# robotx_img_proc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
res/: links.txt
spike/: i2c_test.py  test_diode.py  test_radar.py  usage_haar_alternative.txt  usage_haar_creator.txt  usage_humoments.txt
src/: ColorSegmentation.cpp  ColorSegmentation.h  ObjectFinder.cpp  ObjectFinder.h  color_sensor.ino  open.cpp
src/cpp_impl/: ColorSegmentation.cpp  ColorSegmentation.h  ObjectFinder.cpp  ObjectFinder.h  Sensors.cpp  Sensors.h  open.cpp
src/haar_cascade_creator/data_acquisition/: get_neg.py  get_poz.py  get_real.py  get_real_cubes.py
src/haar_cascade_creator/data_acquisition/test_cropper/: test_cropper.pde
src/haar_cascade_creator/test_model/: test.py
src/ino_sketches/lcd_predicted_score/: lcd.ino
src/ino_sketches/matrix_panel/: matrix_panel.ino
src/ino_sketches/robotic_arm/: robotic_arm.ino
