cmake_minimum_required(VERSION 2.8)
project (raspicam_test)
set(raspicam_DIR "/usr/local/lib/cmake")
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF (OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING TEST")
file(GLOB_RECURSE sources src/*.cpp src/*.h)
add_executable(simpletest_raspcv ${sources})
target_link_libraries (simpletest_raspcv ${raspicam_CV_LIBS})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND")
ENDIF()