cmake_minimum_required(VERSION 2.8)
project (raspicam_test)
set(raspicam_DIR "/usr/local/lib/cmake")
IF (LINUX)
find_package(raspicam REQUIRED)
ENDIF()
find_package(OpenCV)
MESSAGE(STATUS "COMPILING TEST")
file(GLOB_RECURSE sources src/*.cpp src/*.h)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIB_DIR})
add_executable(simpletest_raspcv ${sources})
target_link_libraries(simpletest_raspcv ${OpenCV_LIBS})
IF(LINUX)
target_link_libraries (simpletest_raspcv ${raspicam_CV_LIBS})
ENDIF()